# Lab_WordCount2

./: .gitignore  CMakeLists.txt  README.md  config.txt
dependencies/: FileProcessor.cpp  FileProcessor.h  thread_safe_queue.h  time_meter.h
src/: Word_count2_multi_thread.cpp
